--- a/index.html
+++ b/index.html
@@ -63,16 +63,21 @@
 					<img src="Liitteet/Lova/Etusivu.png" alt="Lova">
 					<a class="button" href="lova.html">View Lova</a>
 				</div>
-			</div>
-			<div class="column">
 				<div class="content-field card">
 					<img src="Liitteet/Ellibs/Ellibs.png" alt="Ellibs">
 					<a class="button" href="ellibs.html">View Ellibs</a>
 				</div>
+			</div>
+			<div class="column">
 				<div class="content-field card">
 					<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
 					<a class="button" href="citycon.html">View Citycon</a>
 				</div>
+				<div class="content-field card">
+					<img src="Liitteet/Citymarket/Newspaper1.png" alt="Citymarket">
+					<a class="button" href="citymarket.html">View Citymarket</a>
+				</div>
+				<div class="content-field"></div>
 			</div>
 		</div>
 
