--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 			</div>
 			<div class="column">
 				<div class="content-field card">
+					<img src="Liitteet/Staffroom/Logos.png" alt="Staffroom">
+					<a class="button" href="staffroom.html">View Staffroom</a>
+				</div>
+				<div class="content-field card">
 					<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
 					<a class="button" href="citycon.html">View Citycon</a>
 				</div>
@@ -77,7 +81,6 @@
 					<img src="Liitteet/Citymarket/Newspaper1.png" alt="Citymarket">
 					<a class="button" href="citymarket.html">View Citymarket</a>
 				</div>
-				<div class="content-field"></div>
 			</div>
 		</div>
 
