--- a/ellibs.html
+++ b/ellibs.html
@@ -30,7 +30,7 @@
 			<div class="column reversed">
 				<div class="content-field">
 					<h1>Ellibs</h1>
-					<p>The task was to conceptualize a redesign for Ellibs, a digital library and an audio- and e-book platform. The goal was not to build a definitive design, but a visual model that the client can utilize however they wish to further develop their app later. The update was limited to the core functions of the service, such as reading and previewing a book. The concept was implemented with students as the target user group and with brand guidelines in mind. I was involved in every step of the process but mostly in the prototyping phase.</p>
+					<p>The task was to conceptualize a redesign for Ellibs, a digital library and an audio/e-book platform. The goal was not to build a definitive design, but a visual model that the client can utilize however they wish to further develop their app later. The update was limited to the core functions of the service, such as reading and previewing a book. The concept was implemented with students as the target user group and with brand guidelines in mind. I was involved in every step of the process but mostly in the prototyping phase.</p>
 					<div class="column">
 						<div class="content-field">
 							<h3>Team</h3>
