--- a/citymarket.html
+++ b/citymarket.html
@@ -30,7 +30,7 @@
 			<h1>Citymarket</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>I designed for K-Citymarket Riihimäki newspaper and social media ads for a limited period as a substitute to their graphic designer. The ads were made with Kesko's brand guidelines in mind.</p>
+					<p>I created newspaper and social media ads for K-Citymarket Riihimäki as a temporary independent contractor and a substitute to their graphic designer. The ads were designed following Kesko's visual identity guidelines, but there was room for creativity, for example, in terms of colors and composition. The store's visual appearance aimed for a sense of personality, which is why small illustration elements were used as decorative features in the ads.</p>
 				</div>
 				<hr>
 				<div class="content-field" style="width: 33%;">
