--- a/index.html
+++ b/index.html
@@ -28,32 +28,32 @@
 		<div class="content-field" id="worksamples">
 			<h1 style="text-align: center;">Work samples</h1>
 			<div class="column">
-				<div class="content-field card">
+				<a class="content-field card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="Vuorox" >
 					<a class="button" href="vuorox.html">View Vuorox</a>
-				</div>
-				<div class="content-field card">
+				</a>
+				<a class="content-field card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="Lova">
 					<a class="button" href="lova.html">View Lova</a>
-				</div>
-				<div class="content-field card">
+				</a>
+				<a class="content-field card" href="ellibs.html">
 					<img src="Liitteet/Ellibs/Ellibs.png" alt="Ellibs">
 					<a class="button" href="ellibs.html">View Ellibs</a>
-				</div>
+				</a>
 			</div>
 			<div class="column">
-				<div class="content-field card">
+				<a class="content-field card" href="staffroom.html">
 					<img src="Liitteet/Staffroom/Logos.png" alt="Staffroom">
 					<a class="button" href="staffroom.html">View Staffroom</a>
-				</div>
-				<div class="content-field card">
+				</a>
+				<a class="content-field card" href="citycon.html">
 					<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
 					<a class="button" href="citycon.html">View Citycon</a>
-				</div>
-				<div class="content-field card">
+				</a>
+				<a class="content-field card" href="citymarket.html">
 					<img src="Liitteet/Citymarket/Newspaper1.png" alt="Citymarket">
 					<a class="button" href="citymarket.html">View Citymarket</a>
-				</div>
+				</a>
 			</div>
 		</div>
 
