--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="column">
 				<a class="content-field card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="Vuorox" >
-					<a class="button" href="vuorox.html">View Vuorox</a>
+					<div class="button" href="vuorox.html">View Vuorox</div>
 				</a>
 				<a class="content-field card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="Lova">
