--- a/index.html
+++ b/index.html
@@ -30,29 +30,29 @@
 			<div class="column">
 				<a class="content-field card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="Vuorox" >
-					<div class="button" href="vuorox.html">View Vuorox</div>
+					<div class="button">View Vuorox</div>
 				</a>
 				<a class="content-field card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="Lova">
-					<a class="button" href="lova.html">View Lova</a>
+					<div class="button">View Lova</div>
 				</a>
 				<a class="content-field card" href="ellibs.html">
 					<img src="Liitteet/Ellibs/Ellibs.png" alt="Ellibs">
-					<a class="button" href="ellibs.html">View Ellibs</a>
+					<div class="button">View Ellibs</div>
 				</a>
 			</div>
 			<div class="column">
 				<a class="content-field card" href="staffroom.html">
 					<img src="Liitteet/Staffroom/Logos.png" alt="Staffroom">
-					<a class="button" href="staffroom.html">View Staffroom</a>
+					<div class="button">View Staffroom</div>
 				</a>
 				<a class="content-field card" href="citycon.html">
 					<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
-					<a class="button" href="citycon.html">View Citycon</a>
+					<div class="button">View Citycon</div>
 				</a>
 				<a class="content-field card" href="citymarket.html">
 					<img src="Liitteet/Citymarket/Newspaper1.png" alt="Citymarket">
-					<a class="button" href="citymarket.html">View Citymarket</a>
+					<div class="button">View Citymarket</div>
 				</a>
 			</div>
 		</div>
