--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="content-field" id="worksamples">
 			<h1 style="text-align: center;">Work samples</h1>
 			<div class="column">
-				<a class="content-field card" href="vuorox.html">
+				<a class="card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="Vuorox" >
 					<div class="button">View Vuorox</div>
 				</a>
