--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="Vuorox" >
 					<div class="button">View Vuorox</div>
 				</a>
-				<a class="content-field card" href="lova.html">
+				<a class="card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="Lova">
 					<div class="button">View Lova</div>
 				</a>
-				<a class="content-field card" href="ellibs.html">
+				<a class="card" href="ellibs.html">
 					<img src="Liitteet/Ellibs/Ellibs.png" alt="Ellibs">
 					<div class="button">View Ellibs</div>
 				</a>
 			</div>
 			<div class="column">
-				<a class="content-field card" href="staffroom.html">
+				<a class="card" href="staffroom.html">
 					<img src="Liitteet/Staffroom/Logos.png" alt="Staffroom">
 					<div class="button">View Staffroom</div>
 				</a>
-				<a class="content-field card" href="citycon.html">
+				<a class="card" href="citycon.html">
 					<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
 					<div class="button">View Citycon</div>
 				</a>
-				<a class="content-field card" href="citymarket.html">
+				<a class="card" href="citymarket.html">
 					<img src="Liitteet/Citymarket/Newspaper1.png" alt="Citymarket">
 					<div class="button">View Citymarket</div>
 				</a>
