--- a/citymarket.html
+++ b/citymarket.html
@@ -4,7 +4,7 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<title>Citycon</title>
+	<title>Citymarket</title>
 	<link href="styles.css" rel="stylesheet" type="text/css">
 	<link rel="icon" type="image/x-icon" href="#"> <!--FAVICON-->
 	<script src="javascript.js"></script>
