--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	
 	<main>
 		<div class="content-field" id="worksamples">
-			<h1 style="text-align: center;">Work samples</h1>
+			<h1>Work samples</h1>
 			<div class="column">
 				<a class="card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="Vuorox" >
