--- a/citymarket.html
+++ b/citymarket.html
@@ -30,7 +30,7 @@
 			<h1>Citymarket</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>I created newspaper and social media ads for K-Citymarket Riihimäki as a temporary independent contractor and a substitute to their graphic designer. The ads were designed following Kesko's visual identity guidelines, but there was room for creativity, for example, in terms of colors and composition. The store's visual appearance aimed for a sense of personality, which is why small illustration elements were used as decorative features in the ads.</p>
+					<p>I created newspaper and social media ads for K-Citymarket Riihimäki as a temporary independent contractor and a substitute to their graphic designer. The ads were designed following Kesko's visual identity guidelines, but there was room for creativity, for example, in terms of colors and composition. The client desired a sense of personality in the visual appearance of the ads, which is why small illustration elements were used as decorative features in some of them.</p>
 				</div>
 				<hr>
 				<div class="content-field" style="width: 33%;">
