--- a/vuorox.html
+++ b/vuorox.html
@@ -30,7 +30,7 @@
 			<div class="column reversed">
 				<div class="content-field">
 					<h1>Vuorox</h1>
-					<p>The task was to design a concept for Plaincomplex's Vuorox, an app where nurses check and manage their shifts. The goal was not to build a finished product, but a concept model that the client can utilize however they wish to further develop their app later. The project was carried out by a three-person team, including myself. I was part of every step of the process.</p>
+					<p>The task was to create a redesign for Plaincomplex's Vuorox, an app where nurses check and manage their shifts. The goal was not to build a finished product, but a concept model that the client can utilize however they wish to further develop their app later. The project was carried out by a three-person team, including myself. I was part of every step of the process.</p>
 					<div class="column">
 						<div class="content-field">
 							<h3>Team</h3>
@@ -56,9 +56,9 @@
 				</div>
 				<div class="content-field">
 					<h2>Process summary</h2>
-					<p>To build a user-friendly concept, we mapped out the end users' needs by conducting semi-structured interviews with nurses. From the interviews we discovered users' main priorities (maximum control over work shifts, simplicity in observing upcoming shifts) and the most common user types (diginatives, change-resistant senior employees and non-finnish speaking employees).<br>
+					<p>To build a user-friendly concept, we mapped out the end users' needs by conducting <b>semi-structured interviews</b> with nurses. From the interviews we discovered users' main priorities (maximum control over work shifts, simplicity in observing upcoming shifts) and the most common user types (diginatives, change-resistant senior employees and non-finnish speaking employees).<br>
 					<br>
-					Based on the research we mapped out with user flows the main use scenarios and determined design drivers for our app (perceivable at a glance, gives a sense of control, considers different needs, is trustworthy). After that we designed a prototype of the app with Figma. We used it to demonstrate the key functions: checking upcoming shifts, leaving shift and day off requests and managing general work time requests. All the UI elements were tested for accessibility.</p>
+					Based on the research we mapped out with <b>user flows</b> the main use scenarios and determined <b>design drivers</b> for our app (perceivable at a glance, gives a sense of control, considers different needs, is trustworthy). After that we designed an <b>interactive prototype</b> of the app with Figma. We used it to demonstrate the key functions: checking upcoming shifts, leaving shift and day off requests and managing general work time requests. All the UI elements were tested for accessibility.</p>
 				</div>
 			</div>
 		</div>
