--- a/ellibs.html
+++ b/ellibs.html
@@ -52,9 +52,9 @@
 		
 		<div class="content-field">
 			<h2>Process summary</h2>
-			<p>The first phase was an evaluation of the existing application and the identification of problem areas. We accomplished this by conducting a heuristic evaluation of the application, using Nielsen's ten heuristics. This evaluation helped us pinpoint the core issues of the application. Based on the expert assessment and customer feedback data we received from the client, we began developing the service.<br>
+			<p>The first phase was an evaluation of the existing application and the identification of problem areas. We accomplished this by conducting a <b>heuristic evaluation</b> of the application, using Nielsen's ten heuristics. This evaluation helped us pinpoint the core issues of the application. Based on the expert assessment and customer feedback data we received from the client, we began developing the service.<br>
 			<br>
-			In the end, we created an interactive prototype using Figma. We developed the prototype iteratively, conducting A/B testing along the way, which helped make decisions regarding layout and content hierarchy options. The most essential feature presented in the prototype was the reading goal, which allows the user to set either a daily reading target or a deadline for completing a book. The app then calculates how many pages the user needs to read per day to reach the deadline. Finally, we delivered the prototype to the client along with handoff materials that outlined the design system of the prototype.</p>
+			In the end, we created an <b>interactive prototype</b> using Figma. We developed the prototype iteratively, conducting <b>A/B testing</b> along the way, which helped make decisions regarding layout and content hierarchy options. The most essential feature presented in the prototype was the reading goal, which allows the user to set either a daily reading target or a deadline for completing a book. The app then calculates how many pages the user needs to read per day to reach the deadline. Finally, we delivered the prototype to the client along with handoff materials that outlined the design system of the prototype.</p>
 		</div>
 		
 		<div class="content-field">
