--- a/index.html
+++ b/index.html
@@ -36,16 +36,20 @@
 					<img src="Liitteet/Lova/Etusivu.png" alt="Lova">
 					<div class="button">View Lova</div>
 				</a>
+				<a class="card" href="prh.html">
+					<img src="Liitteet/Ellibs/Ellibs.png" alt="Patentti- ja rekisterihallitus">
+					<div class="button">View PRH</div>
+				</a>
+			</div>
+			<div class="column">
 				<a class="card" href="ellibs.html">
 					<img src="Liitteet/Ellibs/Ellibs.png" alt="Ellibs">
 					<div class="button">View Ellibs</div>
 				</a>
-			</div>
-			<div class="column">
-				<a class="card" href="staffroom.html">
+				<!-- <a class="card" href="staffroom.html">
 					<img src="Liitteet/Staffroom/Logos.png" alt="Staffroom">
 					<div class="button">View Staffroom</div>
-				</a>
+				</a> -->
 				<a class="card" href="citycon.html">
 					<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
 					<div class="button">View Citycon</div>
