--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<div class="button">View Lova</div>
 				</a>
 				<a class="card" href="prh.html">
-					<img src="Liitteet/PRH/Auditexample.png" alt="Patentti- ja rekisterihallitus">
+					<img src="Liitteet/PRH/Auditexample.png" alt="PRH">
 					<div class="button">View PRH</div>
 				</a>
 			</div>
