--- a/prh.html
+++ b/prh.html
@@ -31,7 +31,7 @@
 			<h1>Patentti- ja rekisterihallitus</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>I have conducted several <b>accessibility audits</b> for PRH while working for my current employer, Preeriapingviini Oy. The purpose of these audits is to help the client improve accessibility of their web services for people with disabilities. In audits, the use cases of the web service defined by the client are reviewed page by page and any violations of WCAG (Web Content Accessibility Guidelines) are reported. These violations are summarized in a report that also includes suggestions for fixing the issues. My role involves both creating reports and reviewing ones made by coworkers before handoff to the client.</p>
+					<p>I have conducted several <b>accessibility audits</b> for PRH while working for my current employer, Preeriapingviini Oy. The purpose of these audits is to help the client improve accessibility of their web services for people with disabilities. In audits, the use cases of the service defined by the client are reviewed and any violations of WCAG (Web Content Accessibility Guidelines) are reported. These violations are summarized in a report that also includes suggestions for fixing the issues. My role involves both creating reports and reviewing ones made by coworkers before handoff to the client.</p>
 				</div>
 				<div class="content-field info">
 					<img src="Liitteet/PRH/Auditexample.png" alt="Audit example image">
