--- a/prh.html
+++ b/prh.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="content-field info">
 					<img src="Liitteet/PRH/Auditexample.png" alt="Audit example image">
-					<p style="font-size: 10px;">This image is for illustrative purposes only and does not depict an actual audit report. Due to confidentiality obligations, images of actual reports cannot be shared.</p>
+					<p style="font-size: 10px;">This image is for illustrative purposes only and does not depict an actual audit report. Due to confidentiality obligations, images of an actual report cannot be shared.</p>
 				</div>
 			</div>
 		</div>
