--- a/citymarket.html
+++ b/citymarket.html
@@ -49,6 +49,9 @@
 				<div class="content-field sample">
 					<img src="Liitteet/Citymarket/Newspaper2.png" alt="Newspaper ad 2">
 				</div>
+				<div class="content-field sample">
+					<img src="Liitteet/Citymarket/Instagram1.png" alt="Social media ad 1">
+				</div>
 			</div>
 			<div class="column">
 				<div class="content-field sample">
@@ -56,6 +59,9 @@
 				</div>
 				<div class="content-field sample">
 					<img src="Liitteet/Citymarket/Newspaper4.png" alt="Newspaper ad 4">
+				</div>
+				<div class="content-field sample">
+					<img src="Liitteet/Citymarket/Instagram2.png" alt="Social media ad 2">
 				</div>
 			</div>
 		</div>
