--- a/prh.html
+++ b/prh.html
@@ -28,7 +28,7 @@
 	<main>
 
 		<div class="content-field">
-			<h1>Finnish Patent and Registration Office</h1>
+			<h1>Finnish Patent and Registration Office (PRH)</h1>
 			<div class="column">
 				<div class="content-field">
 					<p>I have conducted several <b>accessibility audits</b> for PRH while working for my current employer. The purpose of these audits is to help the client improve accessibility of their web services for people with disabilities. In audits, the use cases of the service defined by the client are reviewed and any violations of WCAG (Web Content Accessibility Guidelines) are listed. These violations are summarized in a report that also includes suggestions for fixing the issues. My role involves both creating reports and reviewing ones made by coworkers before handoff.</p>
