--- a/citymarket.html
+++ b/citymarket.html
@@ -49,9 +49,6 @@
 				<div class="content-field sample">
 					<img src="Liitteet/Citymarket/Newspaper2.png" alt="Newspaper ad 2">
 				</div>
-				<div class="content-field sample">
-					<img src="Liitteet/Citymarket/Instagram1.png" alt="Social media ad 1">
-				</div>
 			</div>
 			<div class="column">
 				<div class="content-field sample">
@@ -59,6 +56,11 @@
 				</div>
 				<div class="content-field sample">
 					<img src="Liitteet/Citymarket/Newspaper4.png" alt="Newspaper ad 4">
+				</div>
+			</div>
+			<div class="column">
+				<div class="content-field sample">
+					<img src="Liitteet/Citymarket/Instagram1.png" alt="Social media ad 1">
 				</div>
 				<div class="content-field sample">
 					<img src="Liitteet/Citymarket/Instagram2.png" alt="Social media ad 2">
