--- a/index.html
+++ b/index.html
@@ -28,30 +28,30 @@
 		<div class="content-field" id="worksamples">
 			<h1>Work samples</h1>
 			<div class="column">
-				<a class="card" href="vuorox.html">
-					<img src="Liitteet/Vuorox/Vuorox.png" alt="Vuorox" >
-					<div class="button">View Vuorox</div>
+				<a class="card" href="prh.html">
+					<img src="Liitteet/PRH/Auditexample.png" alt="">
+					<div class="button">View PRH</div>
 				</a>
 				<a class="card" href="lova.html">
-					<img src="Liitteet/Lova/Etusivu.png" alt="Lova">
+					<img src="Liitteet/Lova/Etusivu.png" alt="">
 					<div class="button">View Lova</div>
 				</a>
-				<a class="card" href="prh.html">
-					<img src="Liitteet/PRH/Auditexample.png" alt="PRH">
-					<div class="button">View PRH</div>
+				<a class="card" href="vuorox.html">
+					<img src="Liitteet/Vuorox/Vuorox.png" alt="">
+					<div class="button">View Vuorox</div>
 				</a>
 			</div>
 			<div class="column">
 				<a class="card" href="ellibs.html">
-					<img src="Liitteet/Ellibs/Ellibs.png" alt="Ellibs">
+					<img src="Liitteet/Ellibs/Ellibs.png" alt="">
 					<div class="button">View Ellibs</div>
 				</a>
 				<!-- <a class="card" href="staffroom.html">
-					<img src="Liitteet/Staffroom/Logos.png" alt="Staffroom">
+					<img src="Liitteet/Staffroom/Logos.png" alt="">
 					<div class="button">View Staffroom</div>
 				</a> -->
 				<a class="card" href="citycon.html">
-					<img src="Liitteet/Citycon/Canvas.png" alt="Citycon">
+					<img src="Liitteet/Citycon/Canvas.png" alt="">
 					<div class="button">View Citycon</div>
 				</a>
 				<a class="card" href="citymarket.html">
