--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				</div>
 				<div class="content-field">
 					<h1>About me</h1>
-					<p>I am a versatile UX, UI and graphic designer, with a total of 7 years of background in design. I am also dabbling in web front-end development. I am proficient in various user research, conceptualization, and usability testing methods, as well as in implementing interactive prototypes. My work role has also recently included accessibility specialist tasks, which involve conducting accessibility audits for public sector. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them.<br>
+					<p>I am a versatile UX and visual designer, with a total of 7 years of background in design. I am also a dabbling web front-end developer. I am proficient in various user research, conceptualization, and usability testing methods, as well as in implementing interactive prototypes. My work role also includes accessibility specialist tasks, which involve conducting accessibility audits for public sector. I am a Certified Professional in Accessibility Core Competencies (CPACC) member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them.<br>
 					<br>
 					I have graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts. Aside from the design field, I have a background in sales and customer service, which has taught me strong communication and co-operational skills and the ability to be sales-oriented when needed.</p>
 				</div>
