--- a/prh.html
+++ b/prh.html
@@ -31,7 +31,7 @@
 			<h1>Finnish Patent and Registration Office (PRH)</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>I have conducted several <b>accessibility audits</b> for PRH as a consultant while working for my current employer. The purpose of these audits is to help the client improve accessibility of their web services and electronic documents for people with disabilities. In audits, the use cases of the service defined by the client are reviewed and any violations of WCAG 2.1/2.2 (Web Content Accessibility Guidelines) are listed. These violations are summarized in a report that also includes suggestions for fixing the issues. Audits are conducted using technologies such as axe DevTools and screen readers. My role involves both creating reports and reviewing ones made by my coworkers.</p>
+					<p>I have conducted several <b>accessibility audits</b> for PRH as a consultant while working for my current employer. The purpose of these audits is to help the client improve accessibility of their web services and electronic documents for people with disabilities. In audits, the use cases defined by the client are reviewed and any violations of WCAG 2.1/2.2 (Web Content Accessibility Guidelines) are listed. These violations are summarized in a report that also includes suggestions for fixing the issues. Audits are conducted using technologies such as axe DevTools and screen readers. My role involves both creating reports and reviewing ones made by my coworkers.</p>
 				</div>
 				<div class="content-field info">
 					<img src="Liitteet/PRH/Auditexample.png" alt="Audit example image">
