--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<h1>About me</h1>
 					<p>I am a versatile visual designer and an aspiring front-end developer with an accessibility-focused approach. I have 7 years of background in design and other customer-oriented work. I am proficient in various user research, conceptualization, and usability testing methods, as well as in implementing interactive prototypes. My current work role includes accessibility specialist tasks, which involve conducting accessibility audits for public sector. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them.<br>
 					<br>
-					I have graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts. I also have a background in sales and customer service, which has taught me strong communication and co-operational skills and given me a solid groundwork for customer-centric environment in the design industry.</p>
+					I have graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts. I also have a background in customer service roles, which has taught me strong communication and co-operational skills and provided a solid foundation for working in the customer-centric design industry.</p>
 				</div>
 			</div>
 		</div>
