--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -30,7 +30,7 @@
 			<h1>Graphic design</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>Staffroom previously operated under a different business name, and due to the transition to the current one, I was asked to design a new corporate look and visual identity for the company. I therefore designed a new logo, as well as defined new fonts, colors, and other brand elements for the client. At the client's request, I created two logo options that they could use as they saw fit depending on the situation. After that, I produced various commissioned works for the client, such as banners and flyers over the course of a few years.</p>
+					<p>Throughout the years I have done many graphic design commissions both as a freelancer and in design agencies. These commissions include designing logos and other visual identity components as well as layouts for various digital and printed publications. Most of these layouts were made with strict brand guidelines in mind but in some smaller projects that included brand design, there were more creative liberties.</p>
 				</div>
 				<hr>
 				<div class="content-field info">
