--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
 		<div class="content-field" id="worksamples">
 			<h1>Work samples</h1>
 			<div class="column">
-				<a class="card" href="prh.html">
-					<img src="Liitteet/PRH/Auditexample.png" alt="">
-					<div class="button">View PRH</div>
-				</a>
 				<a class="card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="">
 					<div class="button">View Lova</div>
@@ -46,17 +42,9 @@
 					<img src="Liitteet/Ellibs/Ellibs.png" alt="">
 					<div class="button">View Ellibs</div>
 				</a>
-				<!-- <a class="card" href="staffroom.html">
-					<img src="Liitteet/Staffroom/Logos.png" alt="">
-					<div class="button">View Staffroom</div>
-				</a> -->
-				<a class="card" href="citycon.html">
-					<img src="Liitteet/Citycon/Canvas.png" alt="">
-					<div class="button">View Citycon</div>
-				</a>
-				<a class="card" href="citymarket.html">
-					<img src="Liitteet/Citymarket/Newspaper1.png" alt="Citymarket">
-					<div class="button">View Citymarket</div>
+				<a class="card" href="graphicdesign.html">
+					<img src="Liitteet/Others/Graphicdesign.png" alt="">
+					<div class="button">View graphic design</div>
 				</a>
 			</div>
 		</div>
