--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 		<div class="content-field" id="worksamples">
 			<h1>Work samples</h1>
 			<div class="column">
+				<a class="card" href="prh.html">
+					<img src="Liitteet/Others/PRH.png" alt="">
+					<div class="button">View PRH</div>
+				</a>
+				<a class="card" href="graphicdesign.html">
+					<img src="Liitteet/Others/Graphicdesign.png" alt="">
+					<div class="button">View graphic design commissions</div>
+				</a>
+			</div>
+			<div class="column">
 				<a class="card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="">
 					<div class="button">View Lova</div>
@@ -35,16 +45,6 @@
 				<a class="card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="">
 					<div class="button">View Vuorox</div>
-				</a>
-			</div>
-			<div class="column">
-				<a class="card" href="ellibs.html">
-					<img src="Liitteet/Ellibs/Ellibs.png" alt="">
-					<div class="button">View Ellibs</div>
-				</a>
-				<a class="card" href="graphicdesign.html">
-					<img src="Liitteet/Others/Graphicdesign.png" alt="">
-					<div class="button">View graphic design</div>
 				</a>
 			</div>
 		</div>
