--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
 			<div class="column">
 				<a class="card" href="prh.html">
 					<img src="Liitteet/Others/PRH.png" alt="">
-					<div class="button">View PRH</div>
+					<div class="button">PRH | Accessibility audit</div>
 				</a>
 				<a class="card" href="graphicdesign.html">
 					<img src="Liitteet/Others/Graphicdesign.png" alt="">
-					<div class="button">View graphic design commissions</div>
+					<div class="button">Graphic design commissions</div>
 				</a>
 			</div>
 			<div class="column">
 				<a class="card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="">
-					<div class="button">View Vuorox</div>
+					<div class="button">Vuorox | UX and UI Design</div>
 				</a>
 				<a class="card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="">
-					<div class="button">View Lova</div>
+					<div class="button">Lova | Web design and development</div>
 				</a>
 			</div>
 		</div>
