--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -30,7 +30,7 @@
 			<h1>Graphic design</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>Throughout the years I have done many graphic design commissions both as a freelancer and in design agencies. These commissions include designing logos and other visual identity components as well as layouts for various digital and printed publications. Most of these layouts were made with strict brand guidelines in mind but in some smaller projects that included brand design, there were more creative liberties.</p>
+					<p>Throughout the years I have done many graphic design commissions both as a freelancer and in design agencies. These commissions include designing logos and other visual identity components as well as layouts for various digital and printed publications. Most of these layouts were made with strict brand guidelines in mind but in some smaller projects that included brand design, there were more creative liberties. Here is a sneak peak of the projects i've done.</p>
 				</div>
 				<hr>
 				<div class="content-field info">
@@ -46,22 +46,27 @@
 			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Staffroom/Brand.png" alt="Staffroom">
+					<p>Staffroom | Visual brand design</p>
 				</div>
 				<div class="content-field sample">
 					<img src="Liitteet/Citycon/Collage.png" alt="Citycon">
+					<p>Citycon | Layout design for web and print</p>
 				</div>
 			</div>
 			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Others/Greenglow.png" alt="Greenglow">
+					<p>Greenglow | Visual brand and label design</p>
 				</div>
 				<div class="content-field sample">
 					<img src="Liitteet/Instrumentarium/Collage.png" alt="Instrumentarium">
+					<p>Intrumentarium | Layout design for print</p>
 				</div>
 			</div>
 			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Citymarket/Collage.png" alt="Citymarket">
+					<p>Citymarket | Newspaper and social media ads</p>
 				</div>
 				<div class="content-field sample">
 				</div>
