--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -45,28 +45,28 @@
 		<div class="content-field">
 			<div class="column">
 				<div class="content-field sample">
+					<h3>Staffroom | Visual brand design</h3>
 					<img src="Liitteet/Staffroom/Brand.png" alt="Staffroom">
-					<p>Staffroom | Visual brand design</p>
 				</div>
 				<div class="content-field sample">
+					<h3>Citycon | Layout design for web and print</h3>
 					<img src="Liitteet/Citycon/Collage.png" alt="Citycon">
-					<p>Citycon | Layout design for web and print</p>
 				</div>
 			</div>
 			<div class="column">
 				<div class="content-field sample">
+					<h3>Greenglow | Visual brand and label design</h3>
 					<img src="Liitteet/Others/Greenglow.png" alt="Greenglow">
-					<p>Greenglow | Visual brand and label design</p>
 				</div>
 				<div class="content-field sample">
+					<h3>Intrumentarium | Layout design for print</h3>
 					<img src="Liitteet/Instrumentarium/Collage.png" alt="Instrumentarium">
-					<p>Intrumentarium | Layout design for print</p>
 				</div>
 			</div>
 			<div class="column">
 				<div class="content-field sample">
+					<h3>Citymarket | Newspaper and social media ads</h3>
 					<img src="Liitteet/Citymarket/Collage.png" alt="Citymarket">
-					<p>Citymarket | Newspaper and social media ads</p>
 				</div>
 				<div class="content-field sample">
 				</div>
