--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -45,7 +45,7 @@
 		<div class="content-field">
 			<div class="column">
 				<div class="content-field sample">
-					<h3>Staffroom | Visual brand design</h3>
+					<div class="minisection"><h3>Staffroom</h3><p>| Visual brand design</p></div>
 					<img src="Liitteet/Staffroom/Brand.png" alt="Staffroom">
 				</div>
 				<div class="content-field sample">
