--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -45,27 +45,27 @@
 		<div class="content-field">
 			<div class="column">
 				<div class="content-field sample">
-					<div class="minisection"><h3>Staffroom</h3><hr><p>Visual brand design</p></div>
+					<div class="minisection"><h3>Staffroom</h3><p>| Logo and visual brand design</p></div>
 					<img src="Liitteet/Staffroom/Brand.png" alt="Staffroom">
 				</div>
 				<div class="content-field sample">
-					<h3>Citycon | Layout design for web and print</h3>
+					<div class="minisection"><h3>Citycon</h3><p>| Layout design for web and print</p></div>
 					<img src="Liitteet/Citycon/Collage.png" alt="Citycon">
 				</div>
 			</div>
 			<div class="column">
 				<div class="content-field sample">
-					<h3>Greenglow | Visual brand and label design</h3>
+					<div class="minisection"><h3>Greenglow</h3><p>| Logo and label design</p></div>
 					<img src="Liitteet/Others/Greenglow.png" alt="Greenglow">
 				</div>
 				<div class="content-field sample">
-					<h3>Intrumentarium | Layout design for print</h3>
+					<div class="minisection"><h3>Intrumentarium</h3><p>| Layout design for print</p></div>
 					<img src="Liitteet/Instrumentarium/Collage.png" alt="Instrumentarium">
 				</div>
 			</div>
 			<div class="column">
 				<div class="content-field sample">
-					<h3>Citymarket | Newspaper and social media ads</h3>
+					<div class="minisection"><h3>Citymarket</h3><p>| Newspaper and social media ads</p></div>
 					<img src="Liitteet/Citymarket/Collage.png" alt="Citymarket">
 				</div>
 				<div class="content-field sample">
