--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 			<div class="column">
 				<a class="card" href="prh.html">
 					<img src="Liitteet/Others/PRH.png" alt="">
-					<div class="button">PRH | Accessibility audit</div>
+					<div class="cardsection">
+						<div class="minisection"><h3>PRH</h3><p>| Accessibility audit</p></div>
+						<div class="button">View</div>
+					</div>
 				</a>
 				<a class="card" href="graphicdesign.html">
 					<img src="Liitteet/Others/Graphicdesign.png" alt="">
