--- a/index.html
+++ b/index.html
@@ -36,17 +36,23 @@
 				</a>
 				<a class="card" href="graphicdesign.html">
 					<img src="Liitteet/Others/Graphicdesign.png" alt="">
-					<div class="button">Graphic design commissions</div>
+					<div class="cardsection">
+						<div class="minisection"><h3>Graphic design commissions</h3></div>
+					</div>
 				</a>
 			</div>
 			<div class="column">
 				<a class="card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="">
-					<div class="button">Vuorox | UX and UI Design</div>
+					<div class="cardsection">
+						<div class="minisection"><h3>Vuorox</h3><p>| UX and UI Design</p></div>
+					</div>
 				</a>
 				<a class="card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="">
-					<div class="button">Lova | Web design and development</div>
+					<div class="cardsection">
+						<div class="minisection"><h3>Lova</h3><p>| Web design and development</p></div>
+					</div>
 				</a>
 			</div>
 		</div>
