--- a/index.html
+++ b/index.html
@@ -30,29 +30,21 @@
 			<div class="column">
 				<a class="card" href="prh.html">
 					<img src="Liitteet/Others/PRH.png" alt="">
-					<div class="cardsection">
-						<div class="minisection"><h3>PRH</h3><p>| Accessibility audit</p></div>
-					</div>
+					<div class="cardsection">PRH | Accessibility audit</div>
 				</a>
 				<a class="card" href="graphicdesign.html">
 					<img src="Liitteet/Others/Graphicdesign.png" alt="">
-					<div class="cardsection">
-						<div class="minisection"><h3>Graphic design commissions</h3></div>
-					</div>
+					<div class="cardsection">Graphic design commissions</div>
 				</a>
 			</div>
 			<div class="column">
 				<a class="card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="">
-					<div class="cardsection">
-						<div class="minisection"><h3>Vuorox</h3><p>| UX and UI Design</p></div>
-					</div>
+					<div class="cardsection">Vuorox | UX and UI Design</div>
 				</a>
 				<a class="card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="">
-					<div class="cardsection">
-						<div class="minisection"><h3>Lova</h3><p>| Web design and development</p></div>
-					</div>
+					<div class="cardsection">Lova | Web design and development</div>
 				</a>
 			</div>
 		</div>
