--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="column">
 				<a class="card" href="prh.html">
 					<img src="Liitteet/Others/PRH.png" alt="">
-					<div class="cardsection">PRH | Accessibility audit</div>
+					<div class="cardsection"><b>PRH</b> | Accessibility audit</div>
 				</a>
 				<a class="card" href="graphicdesign.html">
 					<img src="Liitteet/Others/Graphicdesign.png" alt="">
@@ -40,11 +40,11 @@
 			<div class="column">
 				<a class="card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="">
-					<div class="cardsection">Vuorox | UX and UI Design</div>
+					<div class="cardsection"><b>Vuorox</b> | UX and UI Design</div>
 				</a>
 				<a class="card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="">
-					<div class="cardsection">Lova | Web design and development</div>
+					<div class="cardsection"><b>Lova</b> | Web design and development</div>
 				</a>
 			</div>
 		</div>
