--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</a>
 				<a class="card" href="graphicdesign.html">
 					<img src="Liitteet/Others/Graphicdesign.png" alt="">
-					<div class="cardsection">Graphic design commissions</div>
+					<div class="cardsection"><b>Graphic design</b> | Commissions</div>
 				</a>
 			</div>
 			<div class="column">
