--- a/index.html
+++ b/index.html
@@ -30,21 +30,37 @@
 			<div class="column">
 				<a class="card" href="prh.html">
 					<img src="Liitteet/Others/PRH.png" alt="">
-					<div class="cardsection"><b>PRH</b> | Accessibility audit</div>
+					<div class="cardsection">
+						<div class="minisection">
+							<b>PRH</b> | Accessibility audit
+						</div>
+					</div>
 				</a>
 				<a class="card" href="graphicdesign.html">
 					<img src="Liitteet/Others/Graphicdesign.png" alt="">
-					<div class="cardsection"><b>Graphic design</b> | Commissions</div>
+					<div class="cardsection">
+						<div class="minisection">
+							<b>Graphic design</b> | Commissions
+						</div>
+					</div>
 				</a>
 			</div>
 			<div class="column">
 				<a class="card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="">
-					<div class="cardsection"><b>Vuorox</b> | UX and UI Design</div>
+					<div class="cardsection">
+						<div class="minisection">
+							<b>Vuorox</b> | UX and UI Design
+						</div>
+					</div>
 				</a>
 				<a class="card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="">
-					<div class="cardsection"><b>Lova</b> | Web design and development</div>
+					<div class="cardsection">
+						<div class="minisection">
+							<b>Lova</b> | Web design and development
+						</div>
+					</div>
 				</a>
 			</div>
 		</div>
