--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -30,7 +30,7 @@
 			<h1>Graphic design</h1>
 			<div class="column">
 				<div class="content-field">
-					<p>Throughout the years I have done many graphic design commissions both as a freelancer and in design agencies. These commissions include designing logos and other visual identity components as well as layouts for various digital and printed publications. Most of these layouts were made with strict brand guidelines in mind but in some smaller projects that included brand design, there were more creative liberties. Here is a sneak peak of the projects i've done.</p>
+					<p>Here is a sneak peak of the graphic design commissions i've done throughout the years both as a freelancer and in design agencies. These commissions include designing logos and other visual identity components as well as layouts for various digital and printed publications. Most of these layouts were made with strict brand guidelines in mind but in some smaller projects that included brand design, there were more creative liberties.</p>
 				</div>
 				<hr>
 				<div class="content-field info">
