--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<img src="Liitteet/Others/Graphicdesign.png" alt="">
 					<div class="cardsection">
 						<div class="minisection">
-							<b>Graphic design</b> | Commissions
+							<b>Commissions</b> | Graphic design
 						</div>
 					</div>
 				</a>
