--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 				<a class="card" href="prh.html">
 					<img src="Liitteet/Others/PRH.png" alt="">
 					<div class="cardsection">
-						<div class="minisection">
-							<b>PRH</b> | Accessibility audit
+						<div>
+							<h3>PRH</h3>
+							<p>Accessibility audit</p>
 						</div>
+						<div class="button">View</div>
 					</div>
 				</a>
 				<a class="card" href="graphicdesign.html">
