--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<a class="card" href="prh.html">
 					<img src="Liitteet/Others/PRH.png" alt="">
 					<div class="cardsection">
-						<div>
+						<div class="section">
 							<h3>PRH</h3>
 							<p>Accessibility audit</p>
 						</div>
