--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 				<a class="card" href="graphicdesign.html">
 					<img src="Liitteet/Others/Graphicdesign.png" alt="">
 					<div class="cardsection">
-						<div class="minisection">
-							<b>Commissions</b> | Graphic design
+						<div class="section">
+							<h3>Commissions</h3>
+							<p>Graphic design</p>
 						</div>
+						<div class="button">View</div>
 					</div>
 				</a>
 			</div>
@@ -51,17 +53,21 @@
 				<a class="card" href="vuorox.html">
 					<img src="Liitteet/Vuorox/Vuorox.png" alt="">
 					<div class="cardsection">
-						<div class="minisection">
-							<b>Vuorox</b> | UX and UI Design
+						<div class="section">
+							<h3>Vuorox</h3>
+							<p>UX and UI Design</p>p>
 						</div>
+						<div class="button">View</div>
 					</div>
 				</a>
 				<a class="card" href="lova.html">
 					<img src="Liitteet/Lova/Etusivu.png" alt="">
 					<div class="cardsection">
-						<div class="minisection">
-							<b>Lova</b> | Web design and development
+						<div class="section">
+							<h3>Lova</h3>
+							<p>Web design and development</p>
 						</div>
+						<div class="button">View</div>
 					</div>
 				</a>
 			</div>
