--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<div class="cardsection">
 						<div class="section">
 							<h3>Vuorox</h3>
-							<p>UX and UI Design</p>p>
+							<p>UX and UI Design</p>
 						</div>
 						<div class="button">View</div>
 					</div>
