--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<img src="Liitteet/Others/PRH.png" alt="">
 					<div class="cardsection">
 						<div class="section">
-							<h3>PRH</h3>
+							<h3>Patent and Registration Office</h3>
 							<p>Accessibility audit</p>
 						</div>
 					</div>
