--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 					<img src="Liitteet/Others/Graphicdesign.png" alt="">
 					<div class="cardsection">
 						<div class="section">
-							<h3>Commissions</h3>
-							<p>Graphic design</p>
+							<h3>Graphic design commissions</h3>
+							<p>Layout, logo and brand design</p>
 						</div>
 					</div>
 				</a>
