--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -46,27 +46,32 @@
 			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Citymarket/Collage.png" alt="Citymarket">
-					<div class="minisection"><h3>Citymarket</h3><p>| Newspaper and social media ads</p></div>
+					<h3>Citymarket</h3>
+					<p>Newspaper and social media ads</p>
 				</div>
 				<div class="content-field sample">
 					<img src="Liitteet/Citycon/Collage.png" alt="Citycon">
-					<div class="minisection"><h3>Citycon</h3><p>| Layout design for web and print</p></div>
+					<h3>Citycon</h3>
+					<p>Layout design for web and print</p>
 				</div>
 			</div>
 			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Staffroom/Brand.png" alt="Staffroom">
-					<div class="minisection"><h3>Staffroom</h3><p>| Logo and visual brand design</p></div>
+					<h3>Staffroom</h3>
+					<p>Logo and visual brand design</p>
 				</div>
 				<div class="content-field sample">
 					<img src="Liitteet/Instrumentarium/Collage.png" alt="Instrumentarium">
-					<div class="minisection"><h3>Intrumentarium</h3><p>| Layout design for print</p></div>
+					<h3>Intrumentarium</h3>
+					<p>Layout design for print</p>
 				</div>
 			</div>
 			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Others/Greenglow.png" alt="Greenglow">
-					<div class="minisection"><h3>Greenglow</h3><p>| Logo and label design</p></div>
+					<h3>Greenglow</h3>
+					<p>Logo and label design</p>
 				</div>
 				<div class="content-field sample">
 				</div>
