--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -47,14 +47,15 @@
 				<div class="content-field sample">
 					<img src="Liitteet/Citymarket/Collage.png" alt="Citymarket">
 					<h3>Citymarket</h3>
-					<p>Newspaper and social media ads</p>
+					<p>Layout design for newspaper and social media ads</p>
 				</div>
 				<div class="content-field sample">
 					<img src="Liitteet/Citycon/Collage.png" alt="Citycon">
 					<h3>Citycon</h3>
-					<p>Layout design for web and print</p>
+					<p>Layout design forprice canvases, media cards, name tags etc.</p>
 				</div>
 			</div>
+		<div class="content-field">
 			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Staffroom/Brand.png" alt="Staffroom">
@@ -64,9 +65,11 @@
 				<div class="content-field sample">
 					<img src="Liitteet/Instrumentarium/Collage.png" alt="Instrumentarium">
 					<h3>Intrumentarium</h3>
-					<p>Layout design for print</p>
+					<p>Layout design for posters, coupons etc.</p>
 				</div>
 			</div>
+		</div>
+		<div classs="content-field">
 			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Others/Greenglow.png" alt="Greenglow">
