--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -55,6 +55,8 @@
 					<p>Layout design forprice canvases, media cards, name tags etc.</p>
 				</div>
 			</div>
+		</div>
+		
 		<div class="content-field">
 			<div class="column">
 				<div class="content-field sample">
@@ -69,6 +71,7 @@
 				</div>
 			</div>
 		</div>
+		
 		<div classs="content-field">
 			<div class="column">
 				<div class="content-field sample">
