--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -72,7 +72,7 @@
 			</div>
 		</div>
 		
-		<div classs="content-field">
+		<div class="content-field">
 			<div class="column">
 				<div class="content-field sample">
 					<img src="Liitteet/Others/Greenglow.png" alt="Greenglow">
