--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 				</div>
 			</div>
 			<div class="logosection">
-				<img src="Liitteet/Others/PRH-logo.png" alt="PRH logo">
-				<img src="Liitteet/Citymarket/Logo.png" alt="Citymarket logo">
-				<img src="Liitteet/Citycon/Logo.png" alt="Citycon logo">
-				<img src="Liitteet/Instrumentarium/Logo.png" alt="Instrumentarium logo">
-				<img src="Liitteet/Lova/Logo.png" alt="Lova logo">
+				<img style="height: 80px;" src="Liitteet/Others/PRH-logo.png" alt="PRH logo" style="height: 80px;">
+				<img style="height: 64px;" src="Liitteet/Citymarket/Logo.png" alt="Citymarket logo">
+				<img style="height: 56px;" src="Liitteet/Citycon/Logo.png" alt="Citycon logo">
+				<img style="height: 48px;" src="Liitteet/Instrumentarium/Logo.png" alt="Instrumentarium logo">
+				<img style="height: 72px;" src="Liitteet/Lova/Logo.png" alt="Lova logo">
 			</div>
 		</div>
 	</main>
