--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 				</div>
 			</div>
 			<div class="logosection">
-				<img style="height: 64px;" src="Liitteet/Others/PRH-logo.png" alt="PRH logo" style="height: 80px;">
-				<img style="height: 32px;" src="Liitteet/Citymarket/Logo.png" alt="Citymarket logo">
-				<img style="height: 24px;" src="Liitteet/Citycon/Logo.png" alt="Citycon logo">
-				<img style="height: 16px;" src="Liitteet/Instrumentarium/Logo.png" alt="Instrumentarium logo">
-				<img style="height: 48px;" src="Liitteet/Lova/Logo.png" alt="Lova logo">
+				<div class="content-field"><img style="" src="Liitteet/Others/PRH-logo.png" alt="PRH logo" style="height: 80px;"></div>
+				<div class="content-field"><img style="" src="Liitteet/Citymarket/Logo.png" alt="Citymarket logo"></div>
+				<div class="content-field"><img style="" src="Liitteet/Citycon/Logo.png" alt="Citycon logo"></div>
+				<div class="content-field"><img style="" src="Liitteet/Instrumentarium/Logo.png" alt="Instrumentarium logo"></div>
+				<div class="content-field"><img style="" src="Liitteet/Lova/Logo.png" alt="Lova logo"></div>
 			</div>
 		</div>
 	</main>
