--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
 					I have graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts. I also have a background in customer service roles, which has taught me strong communication and co-operational skills and provided a solid foundation for working in the customer-centric design industry.</p>
 				</div>
 			</div>
-			<div class="logosection">
-				<div class="content-field"><img style="" src="Liitteet/Others/PRH-logo.png" alt="PRH logo" style="height: 80px;"></div>
-				<div class="content-field"><img style="" src="Liitteet/Citymarket/Logo.png" alt="Citymarket logo"></div>
-				<div class="content-field"><img style="" src="Liitteet/Citycon/Logo.png" alt="Citycon logo"></div>
-				<div class="content-field"><img style="" src="Liitteet/Instrumentarium/Logo.png" alt="Instrumentarium logo"></div>
-				<div class="content-field"><img style="" src="Liitteet/Lova/Logo.png" alt="Lova logo"></div>
+			<div class="column">
+				<div class="content-field"><img src="Liitteet/Others/PRH-logo.png" alt="PRH logo"></div>
+				<div class="content-field"><img src="Liitteet/Citymarket/Logo.png" alt="Citymarket logo"></div>
+				<div class="content-field"><img src="Liitteet/Citycon/Logo.png" alt="Citycon logo"></div>
+				<div class="content-field"><img src="Liitteet/Instrumentarium/Logo.png" alt="Instrumentarium logo"></div>
+				<div class="content-field"><img src="Liitteet/Lova/Logo.png" alt="Lova logo"></div>
 			</div>
 		</div>
 	</main>
