--- a/index.html
+++ b/index.html
@@ -88,13 +88,11 @@
 				</div>
 				<div class="content-field">
 					<h1>About me</h1>
-					<p>I am a versatile visual designer and an aspiring front-end developer with an accessibility-focused approach. I have 7 years of background in design and other customer-oriented work. I am proficient in various brand design, user research and usability testing methods, as well as implementing interactive prototypes. My forte is accessiblity, my responsibilities include conducting accessibility audits and creating all design materials with accessiblity as a priority I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them.<br>
+					<p>I am a versatile visual designer and an aspiring front-end developer with an accessibility-focused approach. I have 7 years of background in design and other customer-oriented work. I am proficient in various brand design, user research and usability testing methods, as well as implementing interactive prototypes. My forte is accessiblity, my responsibilities include conducting accessibility audits and designing with accessiblity as a priority. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them.<br>
 					<br>
 					I have graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts. I also have a background in customer service roles, which has taught me strong communication and co-operational skills and provided a solid foundation for working in the customer-centric design industry.</p>
 				</div>
 			</div>
-		</div>
-		<div class="content-field">
 			<div class="logosection">
 				<div class="content-field info"><img src="Liitteet/Others/PRH-logo.png" alt="PRH logo"></div>
 				<div class="content-field info"><img src="Liitteet/Citymarket/Logo.png" alt="Citymarket logo"></div>
@@ -103,6 +101,7 @@
 				<div class="content-field info"><img src="Liitteet/Lova/Logo.png" alt="Lova logo"></div>
 			</div>
 		</div>
+
 	</main>
 	
 	
