--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 						<img src="Liitteet/Profiilikuva.jpg" alt="Profile picture">
 					</div>
 					<div class="tagsection">
-						<div class="tag"><i class="fa fa-desktop"></i>UX &amp; UI</div>
-						<div class="tag"><i class="fa fa-paint-brush"></i>Graphic Design</div>
+						<div class="tag"><i class="fa fa-laptop"></i>UX &amp; UI</div>
+						<div class="tag"><i class="fa fa-object-group"></i>Graphic Design</div>
 						<div class="tag"><i class="fa fa-low-vision"></i>Accessibility</div>
 						<div class="tag"><i class="fa fa-file-code-o"></i>Front&#8209;end</div>
 						<div class="tag"><i class="fa fa-code"></i>HTML &amp; CSS</div>
