--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 						<img src="Liitteet/Profiilikuva.jpg" alt="Profile picture">
 					</div>
 					<div class="tagsection">
-						<div class="tag"><i class="fa fa-laptop"></i>UX &amp; UI</div>
-						<div class="tag"><i class="fa fa-object-group"></i>Graphic Design</div>
-						<div class="tag"><i class="fa fa-low-vision"></i>Accessibility</div>
-						<div class="tag"><i class="fa fa-file-code-o"></i>Front&#8209;end</div>
-						<div class="tag"><i class="fa fa-code"></i>HTML &amp; CSS</div>
-						<!-- <div class="tag"><i class="fa fa-phone"></i>Figma</div>
-						<div class="tag"><i class="fa fa-phone"></i>Adobe</div>
-						<div class="tag"><i class="fa fa-phone"></i>Wordpress</div> -->
+						<div class="tag">UX &amp; UI</div>
+						<div class="tag">Graphic Design</div>
+						<div class="tag">Accessibility</div>
+						<div class="tag">Front&#8209;end</div>
+						<div class="tag">HTML &amp; CSS</div>
+						<div class="tag">Figma</div>
+						<div class="tag">Adobe</div>
+						<div class="tag">Wordpress</div>
 					</div>
 				</div>
 				<div class="content-field">
