--- a/index.html
+++ b/index.html
@@ -25,6 +25,39 @@
 <!--BODY-->	
 	
 	<main>
+		
+		<div class="content-field"  id="aboutme">
+			<div class="column">
+				<div class="content-field" style="width: 36%;">
+					<div class="pictureframe">
+						<img src="Liitteet/Profiilikuva.jpg" alt="Profile picture">
+					</div>
+					<div class="tagsection">
+						<div class="tag">UX &amp; UI</div>
+						<div class="tag">Graphic Design</div>
+						<div class="tag">Accessibility</div>
+						<div class="tag">HTML &amp; CSS</div>
+						<div class="tag">Figma</div>
+						<div class="tag">Adobe</div>
+						<div class="tag">Wordpress</div>
+					</div>
+				</div>
+				<div class="content-field">
+					<h1>Introduction</h1>
+					<p>I am a versatile UX and visual designer with an accessibility-focused approach. I help customers to create accessible and visually coherent web services, documents and publications. This may include brand and layout design, prototyping, usability and accessibility auditing or even light front-end development. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them.<br>
+					<br>
+					I have 7 years of background in design and other customer-oriented work. I have graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts. I also have a customer service background, which has taught me strong communication and co-operational skills and provided a solid foundation for working in the customer-centric design industry.</p>
+				</div>
+			</div>
+			<div class="logosection">
+				<div class="content-field info"><img src="Liitteet/Others/PRH-logo.png" alt="PRH logo"></div>
+				<div class="content-field info"><img src="Liitteet/Citymarket/Logo.png" alt="Citymarket logo"></div>
+				<div class="content-field info"><img src="Liitteet/Citycon/Logo.png" alt="Citycon logo"></div>
+				<div class="content-field info"><img src="Liitteet/Instrumentarium/Logo.png" alt="Instrumentarium logo"></div>
+				<div class="content-field info"><img src="Liitteet/Lova/Logo.png" alt="Lova logo"></div>
+			</div>
+		</div>
+		
 		<div class="content-field" id="worksamples">
 			<h1>Work samples</h1>
 			<div class="column">
@@ -66,38 +99,6 @@
 						</div>
 					</div>
 				</a>
-			</div>
-		</div>
-
-		<div class="content-field"  id="aboutme">
-			<div class="column">
-				<div class="content-field" style="width: 36%;">
-					<div class="pictureframe">
-						<img src="Liitteet/Profiilikuva.jpg" alt="Profile picture">
-					</div>
-					<div class="tagsection">
-						<div class="tag">UX &amp; UI</div>
-						<div class="tag">Graphic Design</div>
-						<div class="tag">Accessibility</div>
-						<div class="tag">HTML &amp; CSS</div>
-						<div class="tag">Figma</div>
-						<div class="tag">Adobe</div>
-						<div class="tag">Wordpress</div>
-					</div>
-				</div>
-				<div class="content-field">
-					<h1>About me</h1>
-					<p>I am a versatile UX and visual designer with an accessibility-focused approach. I help customers to create accessible and visually coherent web services, documents and publications. This may include brand and layout design, prototyping, usability and accessibility auditing or even light front-end development. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them.<br>
-					<br>
-					I have 7 years of background in design and other customer-oriented work. I have graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts. I also have a customer service background, which has taught me strong communication and co-operational skills and provided a solid foundation for working in the customer-centric design industry.</p>
-				</div>
-			</div>
-			<div class="logosection">
-				<div class="content-field info"><img src="Liitteet/Others/PRH-logo.png" alt="PRH logo"></div>
-				<div class="content-field info"><img src="Liitteet/Citymarket/Logo.png" alt="Citymarket logo"></div>
-				<div class="content-field info"><img src="Liitteet/Citycon/Logo.png" alt="Citycon logo"></div>
-				<div class="content-field info"><img src="Liitteet/Instrumentarium/Logo.png" alt="Instrumentarium logo"></div>
-				<div class="content-field info"><img src="Liitteet/Lova/Logo.png" alt="Lova logo"></div>
 			</div>
 		</div>
 
