--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<h1>Introduction</h1>
 					<p>I am a versatile UX and visual designer with an accessibility-focused approach. I help customers to create accessible and visually coherent web services, documents and publications. This may include brand or layout design, prototyping, usability or accessibility audits or even light front-end development. I am a CPACC-certified member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them.<br>
 					<br>
-					I have 7 years of background in design and other customer-oriented work. I have graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts. I also have a customer service background, which has taught me strong communication and co-operational skills and provided a solid foundation for working in the customer-centric design industry.</p>
+					I have 7 years of background in design and other customer-oriented work. I graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts. I also have a customer service background, which has taught me strong communication and co-operational skills and provided a solid foundation for working in the customer-centric design industry.</p>
 				</div>
 			</div>
 			<div class="logosection">
