--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="content-field">
 					<h1>Introduction</h1>
-					<p>I am a versatile UX and visual designer with an accessibility-focused approach. I help customers to create accessible and visually coherent interfaces, documents and publications. This covers usability and accessibility audits, brand and layout design, prototyping and even light front-end development.
+					<p>I am a versatile UX and visual designer with an accessibility-focused approach. I help clients to create accessible and visually coherent interfaces, documents and publications. This covers usability and accessibility audits, brand and layout design, prototyping and even light front-end development.
 					<br><br>
 					I have 7 years of background in design and other customer-oriented work. I graduated from Pekka Halonen Academy in 2018 as a graphic designer and have since worked both in design agencies and as a freelancer. In 2020–2024 I studied UX &amp; UI design at LAB Institute of Design and Fine Arts. I also have a customer service background, which has provided a solid foundation for working in the customer-centric design field. I am a member of the International Association of Accessibility Professionals (IAAP) and have a strong understanding of WCAG standards and applying them.</p>
 					<div class="tagsection">
